update card style

--- a/_cardStyle.scss
+++ b/_cardStyle.scss
@@ -2,6 +2,7 @@
     background-color: $medBeige;
     background-image: url(#{$imgPath}/medBeige.png);
     margin-top: 10px;
+    justify-content: space-around;
     img {
         margin: 5px;
         height: auto;
